src/App.scss
$cream: #fbf8ccff;
$almond: #fde4cfff;
$baby-pink: #ffcfd2ff;
$pink-lavender: #f1c0e8ff;
$mauve: #cfbaf0ff;
$baby-blue-eyes: #a3c4f3ff;
$non-photo-blue: #90dbf4ff;
$electric-blue: #8eecf5ff;
$magic-mint: #98f5e1ff;
$celadon: #b9fbc0ff;
$gunmetal: #293241ff;

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.search-bar {
  width: 98.5%;
  margin: auto;
  margin: .5rem;
  button {
    font-size: .7em;
    background-color: $baby-pink;
    color: black;
    border: solid 1px $gunmetal;
  }
  label, input {
    font-size: 1.3em;;
  }
  .btn {
    font-size: 1.2em;
    background-color: $pink-lavender;
    border: solid 1px $gunmetal;
    &:hover {
      background-color: $magic-mint;
      color: black;
    }
  }
}

.card-container {
  h1 {
    text-align: center;
  }
}

.card-styled {
  padding: .7rem;
  height: 21rem;
  margin: 1.3rem;
  img {
    height: 10rem;
  }
  p {
    height: 0rem;
    overflow: hidden;
  }
  .save-button {
    position: absolute;
    bottom: 2rem;
    left: 2rem;
    background-color: $celadon;
    color: black;
    border: solid 1px $baby-blue-eyes;
    &:hover {
      background-color: $magic-mint;
      color: black;
      border: solid 1.5px $gunmetal;
      font-size: 1.01em;
    }
  }
  .remove-button {
    position: absolute;
    bottom: 2rem;
    left: 2rem;
    background-color: $pink-lavender;
    color: black;
    border: solid 1px $baby-blue-eyes;
    &:hover {
      background-color: $mauve;
      color: black;
      border: solid 1.5px $gunmetal;
      font-size: 2rem;
      font-size: 1.01em;
    }
  }

  .more-info-button {
    position: absolute;
    bottom: 2rem;
    left: 9rem;
    background-color: $baby-blue-eyes;
    color: black;
    border: solid 1px $pink-lavender;
    &:hover {
      background-color: $mauve;
      color: black;
      border: solid 1.5px $gunmetal;
      font-size: 2rem;
      font-size: 1.01em;
    }
  }

}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

$breakpoint-tablet: 1399px;
$breakpoint-tablet-small: 1199px;
$phone: 991px;
$small-phone: 767px;

@media (max-width: $breakpoint-tablet) {
  .card-container {
    div {
      justify-content: center;
    }
  }
  .search-bar {
    margin: auto;
    margin-bottom: .5rem;
    width: 85%;
  }
}

@media (max-width: $breakpoint-tablet-small) {
  .search-bar {
    width: 66.1%;
  }
}

@media (max-width: $phone) {
  .search-bar {
    width: 38.5rem;
  }
}

@media (max-width: $small-phone) {
  .search-bar {
    width: 18rem;
  }
}

